--- a/DevIDE_HW.csproj
+++ b/DevIDE_HW.csproj
@@ -6,9 +6,14 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Antlr4.Runtime.Standard" Version="4.9.2" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.1" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
       <PackageReference Include="NUnit" Version="3.13.1" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Content Include="Task2\PascalLexer.g4" />
     </ItemGroup>
 
 </Project>
